terminada la sección flota con su responsive para celus y tablets, también añadimos un codigo javascript para poder manipular imágenes en la version responsive

--- a/pages/flota.html
+++ b/pages/flota.html
@@ -1,61 +1,248 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JetSmart Argentina Virtual</title>
-    <link rel="icon" type="image/png" href="../images/jetsmart.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="icon" type="image/png" href="../images/jetsmart.ico" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../styles.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container">
-        <nav>
-            <a href="../index.html">
-                <img src="https://ss-static-001.esmsv.com/r/content/host1/f2d9c38defce229111257c5ac2235ce9//img/DzVk6gK9qnybp1k0YfmaqulTQMra6uvAuqBSMA9v.png"
-                    width="180px" alt="logojes">
-            </a>
-            <div class="hamburger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <ul class="menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/historia.html">Quiénes Somos</a></li>
-                <li><a href="../pages/rutas.html">Rutas</a></li>
-                <li><a href="../pages/flota.html">Flota</a></li>
-                <li><a href="../pages/staff.html">Staff</a></li>
-                <li><a href="../pages/acceso.html">Acceso Tripulación</a></li>
-                <li><a href="../pages/registro.html">Registrarse</a></li>
-            </ul>
-        </nav> 
-        <section id="contact">
-            <div>
-                <h2>CONTACTO</h2>
-                <h4>
-                    Ante cualquier consulta, no dude en enviarnos un correo a la siguiente
-                    dirección de mail
-                </h4>
-                <h4>
-                    <a href="mailto:jessupport@smartbirdvirtual.com">jessupport@smartbirdvirtual.com</a>
-                    📧
-                </h4>
-            </div>
-        </section>
-        <footer>
+      <nav>
+        <a href="../index.html">
+          <img
+            src="https://ss-static-001.esmsv.com/r/content/host1/f2d9c38defce229111257c5ac2235ce9//img/DzVk6gK9qnybp1k0YfmaqulTQMra6uvAuqBSMA9v.png"
+            width="180px"
+            alt="logojes"
+          />
+        </a>
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <ul class="menu">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../pages/historia.html">Quiénes Somos</a></li>
+          <li><a href="../pages/rutas.html">Rutas</a></li>
+          <li><a href="../pages/flota.html">Flota</a></li>
+          <li><a href="../pages/staff.html">Staff</a></li>
+          <li><a href="../pages/acceso.html">Acceso Tripulación</a></li>
+          <li><a href="../pages/registro.html">Registrarse</a></li>
+        </ul>
+      </nav>
+      <section id="a320">
+        <h1>A320-200 IAE</h1>
+        <p>
+          El Airbus A320-200 es un avión a reacción de un único pasillo y dos
+          motores iguales fabricado por el consorcio europeo Airbus Industries.
+          Forma parte de la familia del Airbus A320, la línea de aviones más
+          vendida del mundo. El A320 es probablemente más conocido por ser el
+          primer avión en introducir el sistema fly-by-wire, mediante el cual
+          los controles del piloto se transmiten a las partes en movimiento en
+          vuelo por medio de señales electrónicas en vez de por medios
+          mecánicos.
+        </p>
+        <div class="fotorealjetsmart">
+          <img src="../images/DSCN7969.JPG" alt="fotojesfede2" />
+          <img src="../images/DSCN9148.JPG" alt="fotojesfede3" />
+          <img src="../images/jetsfede1.jpeg" alt="fotojesfede4">
+          <img src="../images/DSCN6291.JPG" alt="fotojesfede5">
+        </div>
+        <div id="caracteristicas">
+          <h3>Datos técnicos</h3>
+          <ul>
+            <li>Cantidad en la flota (Argentina): 8</li>
+            <li>Capacidad de pasajeros: Hasta un máximo de 180</li>
+            <li>Envergadura: 34.1m (111 feet 11 inches)</li>
+            <li>Altura: 11.8m (38 feet 7 inches)</li>
+            <li>Motores: 2 motores IAE V2500</li>
+            <li>Velocidad máxima: 828 km/h (511 mph, Mach 0,78)</li>
+            <li>Autonomía: hasta 6500 km (4000 millas)</li>
+          </ul>
+        </div>
+      </section>
+      <section id="flota">
+        <h1>Nuestra Flota</h1>
+        <div class="tarjetas">
+          <div class="tarjeta">
+            <h3>LV-HEK "Huemul"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3b7d561e-65a2-4e1a-9a66-c0ce3a299861/flota-09.webp?fm=png&auto=format"
+              class="huemul"
+              width="200px"
+              alt="lv-hek"
+            />
             <p>
-                &copy; 2024 JetSmart Argentina Virtual. Todos los derechos reservados.
-                No tenemos ninguna relación con la empresa JetSmart Argentina.
+              Es un animal que se encuentra en peligro de extinción y
+              actualmente su situación es declarada como extremadamente crítica.
+              Un ciervo noble que día a día desaparece de nuestra tierra, hoy
+              aparece en el cielo junto al Airbus A320, demostrándole a
+              Sudamérica que aún existe y que es un representante de la región.
             </p>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="../hamburger-menu.js"></script>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-HVT "Jaguar"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3cea4483-ceac-4b93-b1de-fe82604e79fc/flota-06.webp?fm=png&auto=format"
+              class="huemul"
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              El Airbus A320 es un avión que lidera las preferencias dentro de
+              las aerolíneas del mundo. Una aeronave que destaca gracias a su
+              soberanía, al igual que lo hace el Jaguar, el felino líder de
+              América. Ambos, siendo exponentes de la velocidad, la belleza y la
+              eficiencia, han logrado posicionarse como grandes íconos dentro de
+              la región.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-IVN "Zorro Culpeo"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/1edf976f-9b5c-45e1-9a57-64d35e63751a/Cola-Zorro.png?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              El Zorro Culpeo es nativo del lado oeste de Sudamérica, desde
+              Ecuador a Perú hasta las regiones más al sur de la Patagonia y
+              Tierra del Fuego. Nuestros aviones A320 también, hoy nos acompañan
+              en los destinos de Chile, Argentina y Perú.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-IVO "Cardenal"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/15b2b510-99b2-4797-916f-b675b8cecda9/Cola-Cardenal.png?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              El ave Cardenal es una especie propia del hemisferio sur; Brasil,
+              Paraguay, Uruguay y, principalmente Argentina, son los países
+              donde ellos habitan. Es considerada como exótica por su color rojo
+              intenso y las características de su canto. Hoy, el cardenal nos
+              acompaña en nuestro avión A320 que vuela en las rutas nacionales
+              de Argentina e internacional hacia Santiago de Chile.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-JQE "Pingüino Rey"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/34fc52cf-61e8-47a8-9a98-c50527ecd9b2/flota-08.webp?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              El nuevo Airbus A320 es una aeronave que al igual que el Pingüino
+              Rey, gobierna sobre los terrenos del hemisferio sur. Es capaz de
+              desplazarse sin complicaciones sobre las versátiles superficies
+              que nos entrega esta zona, adaptándose naturalmente al ecosistema
+              que predomine en la región.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-KDP "Puma Concolor"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/0583502a-37eb-4482-80bf-e56b7eb9dfab/flota-07.webp?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              La agilidad, la astucia y la versatilidad definen al puma.
+              Coincidentemente, también son las características que más
+              representan a nuestro nuevo Airbus A320. Además de esto, ambos
+              nacen diseñados para combinar la fuerza y la velocidad, obteniendo
+              como resultado un potente despegue del suelo, que les permite
+              alcanzar cualquier objetivo.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-KFX "Cóndor Andino"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/1811a655-291f-459a-be2d-93392c6db568/flota-04.webp?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              La eficiencia y aerodinamismo del Airbus A320 de JetSMART hacen de
+              esta una aeronave formidable para vuelos de corta y larga
+              distancia. Su excelente rendimiento le permite llegar a todas las
+              capitales sudamericanas y centroamericanas sin necesidad de
+              escalas, al igual que el Cóndor, quien puede alcanzar grandes
+              alturas y volar por tiempos prolongados sin complicaciones.
+            </p>
+          </div>
+          <div class="tarjeta">
+            <h3>LV-KJA "Martín Pescador"</h3>
+            <img
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/a43e1993-bc8e-4d86-a494-f58b50081e7e/flota-02.webp?fm=png&auto=format"
+              class=""
+              width="200px"
+              alt="lv-hek"
+            />
+            <p>
+              El Airbus A320 de JetSMART es de gran agilidad y versatilidad de
+              vuelo. Incorpora dispositivos de aerodinámica en sus alas llamados
+              Sharklets, los cuales permiten un óptimo rendimiento y eficiencia
+              de combustible. El Martín Pescador, ave insigne de JetSMART, caza
+              peces con gran destreza, pero si la zona de pesca no es óptima, no
+              tiene inconvenientes en sobrevolar sin problemas el área hasta que
+              se de la oportunidad, igual que nuestro A320 que puede mantenerse
+              en vuelo sin ninguna complicación por tiempos prolongados.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section id="video">
+        <h1>EXPLORA EL A320</h1>
+        <iframe
+          width="950"
+          height="550"
+          src="https://my.matterport.com/show/?m=XBk5wre4i8v&amp;utm_source=4"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section id="contact">
+        <div>
+          <h2>CONTACTO</h2>
+          <h4>
+            Ante cualquier consulta, no dude en enviarnos un correo a la
+            siguiente dirección de mail
+          </h4>
+          <h4>
+            <a href="mailto:jessupport@smartbirdvirtual.com"
+              >jessupport@smartbirdvirtual.com</a
+            >
+            📧
+          </h4>
+        </div>
+      </section>
+      <footer>
+        <p>
+          &copy; 2024 JetSmart Argentina Virtual. Todos los derechos reservados.
+          No tenemos ninguna relación con la empresa JetSmart Argentina.
+        </p>
+      </footer>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script src="../hamburger-menu.js"></script>
+      <script src="script.js" defer></script>
     </div>
-</body>
-
+  </body>
 </html>
